# IrisCode

./: .clang-format  .gitignore  AGENTS.md  Build.json  CMakeLists.txt  Package.swift  README.md
.github/workflows/: address.txt  macosx.yml  windows.yml
Sources/Example/: Main.swift
Sources/IrisUI/App/: App.swift
cmake/: FindWDK.cmake  config.cmake  modules.cmake  skia_prebuilt.cmake
doc/: CXXReflector.md  Plan.md  grammar.md
src/: CMakeLists.txt
src/common/: CMakeLists.txt  args_parse.cc  args_parse.hpp  compiler_support.h  config.cc  config.hpp  decrypt.cc  decrypt.hpp  download.cc  download.hpp  handle.cc  handle.h  log.cc  log.hpp  machine_state.cc  machine_state.hpp  module.modulemap  ntsocket.cc  ntsocket.h  ntsrv.cc  ntsrv.hpp  os.cc  os.hpp  pe_walker.cc  pe_walker.hpp  ref.hpp  rpc.cc  rpc.hpp  source_file.cc  source_file.hpp  stl.hpp  zip.cc  zip.hpp
src/common/swiftui/: swiftui_core.hpp
src/coreui/: CMakeLists.txt  app.cc  app.hpp  app_internal.hpp  dock_window.cc  dock_window.hpp  graphics_context.cc  graphics_context.hpp  module.modulemap  uicore.hpp  uidefs.hpp  view.cc  view.hpp  window.cc  window.hpp
src/coreui/platform/apple/: appl_graphics_context.cc  appl_graphics_context.hpp  appl_window.cc  appl_window.hpp
src/coreui/platform/win/: win32_app.cc  win32_app.hpp  win32_graphics_context.cc  win32_graphics_context.hpp  win32_window.cc  win32_window.hpp  wincomp.cc  wincomp.hpp  wincomp_fx.hpp
src/coreui/view/: button.cc  button.hpp  check_box.cc  check_box.hpp  code_editor.cc  code_editor.hpp  dock_view.cc  dock_view.hpp  label.cc  label.hpp  text_edit.cc  text_edit.hpp  text_input.cc  text_input.hpp
src/coreui/win/: wincomp.cc  wincomp.hpp
src/resource/: res_build_serivce.rc  res_console.rc  res_coord_serivce.rc  resource.h
src/unittest/: CMakeLists.txt  code_editor_test.cc  dock_drag_test.cc  dock_native_drag_smoke_test.cc  gui_test.cc  handle_test.cc  machine_state.cc  path_test.cc  rpc_server.cc  scope_test.cc  vfs_test.cc
src/ycode/: CMakeLists.txt  ReadMe.md
src/ycode/actool/: CMakeLists.txt  CoreUI  actool_main.cpp  asset_catalog.cpp  asset_catalog.h  bin.rs  bom.rs  car.rs  compressor.cpp  compressor.h  driver.h  lib.rs  refer_rle.c  rendition.rs  rle.rs  ycore_config.h
src/ycode/cmake/: utils.cmake
src/ycode/codesign/: CMakeLists.txt  codesign_main.cpp
src/ycode/compression/: Cargo.toml  lib.rs
src/ycode/ibtool/: CMakeLists.txt
src/ycode/packager/: CMakeLists.txt  Cargo.toml  bin.rs  lib.rs  packager.cpp
src/ycode/vsdebugger/: ReadMe.md
src/ycode/ycode-select/: CMakeLists.txt  ycode_select.cpp
src/ycode/ycrun/: CMakeLists.txt  ycrun_main.cpp
tests/: CMakeLists.txt
tests/msrpc2/: CMakeLists.txt  RPCServer.acf  RPCServer.idl  SelfDefine.h  rpc_client.cpp  rpc_server.cpp
tests/parser_tests/: test.all.ib  test.comment.fail.ib  test.conditions.ib  test.configs.ib  test.function.call.ib  test.function.decl.ib  test.import.ib  test.list.ib  test.loop.ib  test.match.ib  test.scope.dict.ib  test.subscript.assign.ib  test.template.decl.ib
tests/simpleio/: CMakeLists.txt  test_iostream.cc
tests/winrpc/: rpc_apis.yml
tests/xge/: 1_success.txt  2_fail.txt  ReadMe.md
tests/xge/tasks/: xg_compile.xml  xg_compile_cpp.xml
